--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -8,7 +8,7 @@
 
 
     <me.dm7.barcodescanner.zxing.ZXingScannerView
-        android:id="@+id/zxscan"
+        android:id="@+id/scanner_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
