--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#f4b517</color>
     <color name="colorPrimaryDark">#C39012</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#9E9E9E</color>
 </resources>
