--- a/app/src/main/res/layout/activity_pin.xml
+++ b/app/src/main/res/layout/activity_pin.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.byteshaft.smart_cash.CardInformation">
 
 
@@ -11,9 +11,9 @@
         android:id="@+id/information_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:cardElevation="20dp"
         android:layout_margin="8dp"
-        android:elevation="3dp"
-        app:cardElevation="20dp">
+        android:elevation="3dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -168,7 +168,6 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -183,16 +182,16 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/card_info"
-                android:inputType="number"
+                android:id="@+id/card_pin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Card Number" />
+                android:hint="PIN"
+                android:inputType="numberPassword" />
 
         </android.support.design.widget.TextInputLayout>
 
         <Button
-            android:id="@+id/button_pay_now"
+            android:id="@+id/pay_now"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
